2008-06-16  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-window.c: Fix opaque region destruction.
                        Add some debug statement.
    
2008-06-16  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/fade/ccm-fade.c: Add debug statement.
	* plugins/shadow/ccm-shadow.c: Affine shadow window policy.
    * src/ccm-screen-plugin.h: Fix CCM_SCREEN_PLUGIN_UNLOCK_ROOT_METHOD
    * src/ccm-screen.c: Check stack on hint type change and transient change.
                        Create window on map event if don't exist.
                        Unmap window if visible on remove.
    * src/ccm-window.c: Destruct CCMPixmap on window paint error.
                        Check XError on XCompositeNameWindowPixmap.
						Always set window translucent when opaque area is empty.

2008-05-31  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/magnifier/ccm-magnifier.c:
    * plugins/mosaic/ccm-mosaic.c:
    * plugins/opacity/ccm-opacity.c:
    * plugins/opacity/ccm-opacity.schemas.in:
    * plugins/perf/ccm-perf.c:
    * src/ccm-keybind.c:
    * src/ccm-keybind.h:
    * src/ccm-property-async.c:
    * src/ccm-screen.c:
    * src/ccm-window.c:
    * src/ccm.h:
    * src/eggaccelerators.c:
    * src/eggaccelerators.h: Add support of button mouse shortcuts, set shortcut
                             Super (roll wheell) to change window opacity.

2008-05-29  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/fade/ccm-fade.c:
    * plugins/menu-animation/ccm-menu-animation.c:
    * plugins/opacity/ccm-opacity.c:
    * plugins/opacity/ccm-opacity.plugin.desktop.in:
    * plugins/shadow/ccm-shadow.c
    * src/ccm-property-async.c:
    * src/ccm-screen.c:
    * src/ccm-window.c:
    * src/ccm.h: Remove state changed signal and update property changed to
                 indicate the type of property changed.
                 Remove get property sync methods not really needed.