@@ -1,5 +1,9 @@
 2008-06-16  Nicolas Bruguier  <gandalfn@club-internet.fr>
 
+    * magnifier/ccm-magnifier.c: Fix magnifier plugin.
+
+2008-06-16  Nicolas Bruguier  <gandalfn@club-internet.fr>
+
     * src/ccm-window.c: Fix opaque region destruction.
                         Add some debug statement.
     
